--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.1.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.10"
   },
